# scicon

./: .gitignore  .style.yapf  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pylintrc  pyproject.toml  release-please-config.json  requirements-ci.txt  requirements-dev.txt  requirements.txt
.claude/: README.md
.codex/: hooks.json
.codex/hooks/: venv_session_start.py  venv_user_prompt.py
.github/workflows/: deploy-docs.yaml  format-and-lint.yaml  format-and-lint.yml  publish-to-pypi.yaml  release-please.yaml  run-tests.yaml
docs/: architecture.md  coding-agent-setup.md  concepts.md  glossary.md  init.md  mcp-server.md  overview.md  package-schema.md  protocol.md  releasing.md  validation.md
examples/scp-package/: assumptions.yaml  claims.yaml  codebase.yaml  datasets.yaml  figures.yaml  manifest.yaml  methods.yaml  operations.yaml  paper.yaml  provenance.yaml  related-work.yaml
scicon/: __init__.py
scicon/cli/: __init__.py  main.py
scicon/conversion/: __init__.py  mock.py
scicon/init/: __init__.py  agents.py  installer.py  merge.py  templates_io.py
scicon/init/templates/: body.md  policy.md  prompt.md  skill.md
scicon/interface/: __init__.py  queries.py  server.py
scicon/mining/: __init__.py
scicon/package/: __init__.py  loader.py  paths.py
scicon/schema/: __init__.py  filenames.py  objects.py  predicates.py  status.py
scicon/validation/: __init__.py  checks.py  results.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_example_package_valid.py  test_init_cli.py  test_interface_queries.py
tests/smoke/: test_mcp_server.py
tests/unit/: __init__.py  test_cli.py  test_init_installer.py  test_init_merge.py  test_loader.py  test_logging.py  test_paths.py  test_predicates.py  test_status.py  test_validation.py
website/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  tsconfig.json
website/scripts/: build-docs.mjs
website/src/animations/: animationManifest.js
website/src/animations/blocks/block1-scientific-output/: block1.manifest.js  block1Assets.js  block1Graph.js  block1Runtime.js  block1Scene.js
website/src/animations/blocks/block1-scientific-output/steps/: 01-researcher-appears.js  02-research-process-path.js  03-output-to-conversion-tool.js  03-research-process-to-scientific-output.js  03-scientific-output-idle.js  04-conversion-tool-processing.js  05-conversion-tool-to-graph.js  06-graph-edges-appear.js
website/src/animations/blocks/block2-agent-mcp/: block2.manifest.js  block2Assets.js  block2Runtime.js  block2Scene.js
website/src/animations/blocks/block2-agent-mcp/steps/: 00-compress-knowledge-graph.js  01-user-agent-connect.js  02-query-enters.js  03-mcp-table-connects.js  04-graph-access-activations.js  05-graph-access-idle.js
website/src/animations/config/: animationBlockSchema.js  block1Config.js  block2Config.js
website/src/animations/core/: assets.js  colors.js  lottieHelpers.js  seededRandom.js  typography.js
website/src/components/HomepageFeatures/: index.tsx
website/src/components/ScpAnimation/: LazyAnimation.tsx  index.tsx
website/src/components/VideoEmbed/: index.tsx
website/src/components/animation/: AnimationBlockLayout.jsx  AnimationController.jsx  AnimationExperience.jsx  ConversionToolOverlay.jsx  LottieStage.jsx  PhaseStoryline.jsx  controllerState.js  experienceConfig.js  experienceState.js  storylineScale.js  useReducedMotion.js  useResponsiveScale.js
website/src/css/: animation.css  custom.css
website/src/pages/: index.module.css  index.tsx
