[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'scicon'
version = '0.1.0'
description = 'Scientific Context Protocol.'
readme = 'README.md'
requires-python = '>=3.12'
license = {file = 'LICENSE'}
dependencies = [
  'mcp>=1.2',
  'pyyaml>=6.0',
  'tomlkit>=0.13',
]

[project.optional-dependencies]
dev = [
  'isort==8.0.1',
  'pylint==4.0.5',
  'pytest',
  'ruff==0.15.12',
  'yapf==0.43.0',
]
test = [
  'pytest',
  'pyyaml>=6.0',
  'mcp>=1.2',
  'tomlkit>=0.13',
]

[project.scripts]
scicon = 'scicon.cli.main:main'

[tool.hatch.build.targets.wheel]
artifacts = [
  'scicon/init/templates/*.md',
]
packages = ['scicon']
