[build-system]
requires = ['hatchling', 'hatch-vcs', 'hatch-fancy-pypi-readme']
build-backend = 'hatchling.build'

[project]
name = 'scicon'
dynamic = ['version', 'readme']
authors = [
  {name = 'Twinapse'},
]
description = 'The official implementation of the Scientific Context Protocol, an agent-readable layer for scientific outputs served over MCP'
requires-python = '>=3.12'
license = {file = 'LICENSE'}
keywords = ['scp', 'scientific-context-protocol', 'mcp', 'model-context-protocol', 'research', 'ai-agents']
classifiers = [
  'Development Status :: 3 - Alpha',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.12',
  'Topic :: Scientific/Engineering',
]
dependencies = [
  'mcp>=1.2',
  'pyyaml>=6.0',
  'tomlkit>=0.13',
]

[project.urls]
Homepage = 'https://github.com/twinapse/scicon'
Repository = 'https://github.com/twinapse/scicon'
Issues = 'https://github.com/twinapse/scicon/issues'
Documentation = 'https://github.com/twinapse/scicon#documentation'

[project.optional-dependencies]
dev = [
  'isort==8.0.1',
  'pylint==4.0.5',
  'pytest',
  'ruff==0.15.12',
  'yapf==0.43.0',
]
test = [
  'pytest',
  'pyyaml>=6.0',
  'mcp>=1.2',
  'tomlkit>=0.13',
]

[project.scripts]
scicon = 'scicon.cli.main:main'

[tool.hatch.version]
source = 'vcs'

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = 'text/markdown'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = 'README.md'
start-at = '# Scientific Context Protocol'
end-before = '<!-- toc -->'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = 'README.md'
start-at = '## Current status'
end-before = '## Documentation'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = """
## Documentation

Browse the full documentation index [on GitHub](https://github.com/twinapse/scicon#documentation).
"""

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\]\((docs/[^)]+|CONTRIBUTING\.md)\)'
replacement = '](https://github.com/twinapse/scicon/blob/main/\1)'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\]\((examples/[^)]+)\)'
replacement = '](https://github.com/twinapse/scicon/tree/main/\1)'

[tool.hatch.build.targets.wheel]
artifacts = [
  'scicon/init/templates/*.md',
]
packages = ['scicon']
